--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(LearnOpenGL VERSION 0.1.0)
 
-include(CTest)
-enable_testing()
+set(PROJECT_NAME LearnOpenGL)
+project(${PROJECT_NAME})
 
-add_executable(LearnOpenGL main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+add_subdirectory(external/glad)
+target_link_libraries(${PROJECT_NAME} glad)
+
+add_subdirectory(external/glfw)
+target_link_libraries(${PROJECT_NAME} glfw)
+
+add_subdirectory(external/glm)
+target_link_libraries(${PROJECT_NAME} glm)
+
+
+
